chore: Update dependencies and add session encryption for login API

--- a/.env
+++ b/.env
@@ -12,3 +12,6 @@ POSTGRES_USER="default"
 POSTGRES_HOST="ep-patient-field-a4pbgkza-pooler.us-east-1.aws.neon.tech"
 POSTGRES_PASSWORD="KaF2ICHgp1vV"
 POSTGRES_DATABASE="verceldb"
+
+SESSION_PASSWORD="yPo4T7apfbdvctV1Bso1oAndQH9qwC94"
+NODE_ENV="development"
