--- a/package.json
+++ b/package.json
@@ -9,18 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^5.16.0",
+    "@prisma/client": "^5.16.1",
     "@vercel/postgres": "^0.9.0",
     "add-to-calendar-button-react": "^2.6.16",
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.3",
     "classnames": "^2.5.1",
+    "cookie": "^0.6.0",
+    "crypto": "^1.0.1",
     "input": "^1.0.1",
+    "iron-session": "^8.0.2",
+    "jsonwebtoken": "^9.0.2",
     "mdb-react-ui-kit": "^8.0.0",
-    "next": "14.2.3",
+    "next": "^14.2.3",
     "next-auth": "^4.24.7",
-    "prisma": "^5.14.0",
+    "prisma": "^5.16.1",
     "react": "^18",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18",
